<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/act_calendar_weekday_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        style="@style/calendar_weekday_label_item"
        android:text="@string/act_calendar_tv_weekday_sun"
        android:textSize="@dimen/rule_text_size_three"
        android:textColor="@color/calendar_weekday_label_spe"
        />
    <TextView
        style="@style/calendar_weekday_label_item"
        android:text="@string/act_calendar_tv_weekday_mon"
        android:textSize="@dimen/rule_text_size_three"
        android:textColor="@color/style_five"
        />
    <TextView
        style="@style/calendar_weekday_label_item"
        android:text="@string/act_calendar_tv_weekday_tue"
        android:textSize="@dimen/rule_text_size_three"
        android:textColor="@color/style_five"
        />
    <TextView
        style="@style/calendar_weekday_label_item"
        android:text="@string/act_calendar_tv_weekday_wed"
        android:textSize="@dimen/rule_text_size_three"
        android:textColor="@color/style_five"
        />
    <TextView
        style="@style/calendar_weekday_label_item"
        android:text="@string/act_calendar_tv_weekday_thu"
        android:textSize="@dimen/rule_text_size_three"
        android:textColor="@color/style_five"
        />
    <TextView
        style="@style/calendar_weekday_label_item"
        android:text="@string/act_calendar_tv_weekday_fri"
        android:textSize="@dimen/rule_text_size_three"
        android:textColor="@color/style_five"
        />
    <TextView
        style="@style/calendar_weekday_label_item"
        android:text="@string/act_calendar_tv_weekday_sat"
        android:textSize="@dimen/rule_text_size_three"
        android:textColor="@color/calendar_weekday_label_spe"
        />
</LinearLayout>
